--- a/Admin/headerAdmin.html
+++ b/Admin/headerAdmin.html
@@ -13,6 +13,6 @@
         <a href="specialty.html">Spécialités</a>
         <a href="center.html">Centres</a>
         <a href="request.html">Demandes</a>
-        <a href="../Company/index.html"><img class="icon" src="../images/icons/Icon_disconnect.png"> Se déconnecter</a>
+        <button id="logoutButton"><img class="icon" src="../images/icons/Icon_disconnect.png"> Se déconnecter</button>
     </div>
 </div>
