--- a/Account/headerAccount.html
+++ b/Account/headerAccount.html
@@ -12,6 +12,6 @@
         <a href="appointment.html">Rendez-vous</a>
         <a href="medicalRecord.html">Dossier médical</a>
         <a href="prescription.html">Prescriptions</a>
-        <a href="../Company/index.html"><img class="icon" src="../images/icons/Icon_disconnect.png"> Se déconnecter</a>
+        <button id="logoutButton"><img class="icon" src="../images/icons/Icon_disconnect.png"> Se déconnecter</button>
     </div>
 </div>
