Amélioration archi suite et fin

--- a/Admin/accountAdmin.html
+++ b/Admin/accountAdmin.html
@@ -10,8 +10,7 @@
     </head>
 
     <body>
-        <header id="headerAdmin">
-        </header>
+        <header id="header"></header>
 
         <div class="container">
             <h1>Espace administrateur</h1>
@@ -32,50 +31,16 @@
         <footer id="siteFooter">
         </footer>
 
-                <!-- Header de ma page -->
+        <!-- Appel des scripts -->
+        
+        <script src="../js/header.js"></script>
         <script>
-            fetch("headerAdmin.html")
-            .then(response => response.text())
-            .then(data => {
-                document.getElementById("headerAdmin").innerHTML = data;
-            })
-            .catch(error => console.error("Erreur lors du chargement du header :", error));
+            initHeader("headerAdmin.html", "../style/Admin/style_headerAdmin.css");
         </script>
         
-                <!-- Footer de ma page -->
-        <script>
-            fetch("../Company/footer.html")
-            .then(response => response.text())
-            .then(data => {
-                document.getElementById("siteFooter").innerHTML = data;
-            })
-        </script>
+        <script src="../js/footer.js"></script>
 
-        <script>
-            const token = localStorage.getItem('jwt');
-
-            if (!token) {
-                alert("Vous devez être connecté pour accéder à cette page.");
-                window.location.href = "../Company/connexion.html";
-            } else {
-                try {
-                    const payload = JSON.parse(atob(token.split('.')[1]));
-                    const roles = payload.roles || [];
-
-                    if (!roles.includes('ROLE_ADMIN') && !roles.includes('ROLE_DOCTOR')) {
-                        alert("Vous n'êtes pas autorisé à accéder à cette page.");
-                        window.location.href = "../Company/connexion.html";
-                    }
-
-                } catch (e) {
-                    console.error("JWT invalide :", e);
-                    localStorage.removeItem('jwt');
-                    window.location.href = "../Company/connexion.html";
-                }
-            }
-        </script>
-
-        <script src="../js/authHeaderFooter.js"></script>
+        <script src="../js/auth.js"></script>
         <script>
             initPage({
                 headerPath: "headerAdmin.html",
