Implémentation jointure avec emergency contact

--- a/Account/medicalRecord.html
+++ b/Account/medicalRecord.html
@@ -35,12 +35,12 @@
                     </div>
                         <p class="bold">Contact d'urgence</p>
                     <div class="grid">
-                        <label for="prenomContact">Prénom</label>
-                        <input id="prenomContact" type="text" placeholder="Prénom">
-                        <label for="nomContact">Nom</label>
-                        <input id="nomContact" type="text" placeholder="Nom">
-                        <label for="phoneContact">Téléphone</label>
-                        <input id="phoneContact" type="text" placeholder="0600000000">
+                        <label for="emergencyContactFirstname">Prénom</label>
+                        <input id="emergencyContactFirstname" type="text" placeholder="Prénom">
+                        <label for="emergencyContactLastname">Nom</label>
+                        <input id="emergencyContactLastname" type="text" placeholder="Nom">
+                        <label for="emergencyContactPhoneNumber">Téléphone</label>
+                        <input id="emergencyContactPhoneNumber" type="text" placeholder="0600000000">
                     </div>
                 </div>
 
