--- a/Account/medicalRecord.html
+++ b/Account/medicalRecord.html
@@ -92,10 +92,10 @@
                             <label for="nonTV">Non</label>
                             <input id="nonTV" type="checkbox">
                             <p class="regime1">Régime alimentaire</p>
+                            <label for="vegan">Classique</label>
+                            <input id="vegan" type="checkbox">
                             <label for="vegetarien">Végétarien</label>
                             <input id="vegetarien" type="checkbox">
-                            <label for="vegan">Vegan</label>
-                            <input id="vegan" type="checkbox">
                             <p class="regime2">spécifique</p>
                             <label for="sansSel">Sans sel</label>
                             <input id="sansSel" type="checkbox">
