--- a/Account/appointment.html
+++ b/Account/appointment.html
@@ -4,6 +4,8 @@
         <meta charset="UTF-8">
         <link rel="stylesheet" href="../style/style.css">
         <link rel="stylesheet" href="../style/Account/style_appointment.css">
+        <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css"/>
+        <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
         <title>HealthNorth - Accueil</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="description" content="HealthNorth - Leader de la santé depuis 1987">
@@ -55,19 +57,9 @@
                 <div class="rechercheEtablissement">
                     <div class="carte">
                         <p>Sélectionner un établissement directement sur la carte</p>
-                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3428.254528406006!2d3.8586178765278305!3d43.583213156954095!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x12b6af03d648d707%3A0xddb0dbca90992559!2sPolyclinique%20Saint-Roch!5e1!3m2!1sfr!2sfr!4v1763653807681!5m2!1sfr!2sfr" width="800" height="350" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                        <div id="map"></div>
                     </div>
-                
-                    <div class="infosEtablissement">
-                        <h2>Informations sur l'établissement</h2>
-                        <p>
-                            Nom : <br>
-                            Lieu:<br>
-                            Spécialités: <br>
-                            Spécialistes :
-                        </p>
-                        <a href="appointment_results.html" class="bouton">Rechercher</a>
-                    </div>
+                    <div id="infosCenter"></div>
                 </div>
             </div>
         </div>
@@ -120,6 +112,11 @@
         <script src="../js/treatment_list.js"></script>
         <script>
             document.addEventListener('DOMContentLoaded', getTreatmentList);
+        </script>
+
+        <script src="../js/centers_map.js"></script>
+        <script>
+            document.addEventListener('DOMContentLoaded', loadCentersMap);
         </script>
         
     </body>
