--- a/Account/appointment.html
+++ b/Account/appointment.html
@@ -49,7 +49,7 @@
                             <input id="ou" type="text" name="ou" class="field" placeholder="Nom de l'établissement, ville, code postal..." required>
                             <ul id="suggestionsOu"></ul>
                         </div>
-                        <a href="appointment_results.html" class="bouton">Rechercher</a>
+                        <a href="#" id="rechercher" class="bouton">Rechercher</a>
                     </div>
                 </div>
 
@@ -118,6 +118,8 @@
         <script>
             document.addEventListener('DOMContentLoaded', loadCentersMap);
         </script>
+
+        <script src="../js/appointment_search.js"></script>
         
     </body>
 </html>
