--- a/Account/appointment_results.html
+++ b/Account/appointment_results.html
@@ -15,7 +15,7 @@
         <h1>Résultat de votre recherche</h1>
 
         <div class="filtres">
-            <a href="appointment.html" class="bouton">Modifier ma recherche</a>
+            <a href="#" id="lastSearch" class="bouton">Modifier ma recherche</a>
         </div>
 
         <div class="container" id="container">
@@ -46,5 +46,8 @@
         <script>
             document.addEventListener('DOMContentLoaded', getAppointmentResults);
         </script>
+
+        <script src="../js/appointment_modifyLastSearch.js"></script>
+
     </body>
 </html>
