--- a/Account/appointment_change.html
+++ b/Account/appointment_change.html
@@ -21,6 +21,7 @@
                 <h2>Modifier la date</h2>
                 <p class="legend">Prochaines disponibilités</p>
                 <div id="calendarGrid"></div>
+                <a href="appointment_change_confirmation.html" class="bouton">Modifier votre rendez-vous</a>
             </div>
 
             <div class="cancel">
