--- a/Account/medicalRecord.html
+++ b/Account/medicalRecord.html
@@ -153,9 +153,9 @@
             });
         </script>
 
-        <script src="../js/patient.js"></script>
+        <script src="../js/medicalRecord.js"></script>
         <script>
-            document.addEventListener('DOMContentLoaded', getPatientData);
+            document.addEventListener('DOMContentLoaded', getMedicalRecord);
         </script>
         
     </body>
