Changement majeur appointment !! Bugs réglés sont de retour (en cours) via nouvelle méthode appointment sans création de slot

--- a/Account/appointment_change.html
+++ b/Account/appointment_change.html
@@ -56,7 +56,7 @@
 
         <script src="../js/appointment_change.js"></script>
         <script>
-            document.addEventListener('DOMContentLoaded', getAppointmentChange);
+            document.addEventListener('DOMContentLoaded', getAppointmentResults);
         </script>
         
     </body>
