--- a/Account/appointment_change.html
+++ b/Account/appointment_change.html
@@ -56,7 +56,7 @@
 
         <script src="../js/appointment_change.js"></script>
         <script>
-            document.addEventListener('DOMContentLoaded', getAppointmentResults);
+            document.addEventListener('DOMContentLoaded', getAppointmentChanges);
         </script>
         
     </body>
