--- a/Account/appointment_change.html
+++ b/Account/appointment_change.html
@@ -28,7 +28,7 @@
                 <p class="justify">Il est impossible de changer de spécialiste ou d'établissement en ligne. 
                     Vous pouvez nous contacter par téléphone au Numéro si vous souhaitez de l'aide pour modifier votre rendez-vous.
                     Sinon, il est également possible d'annuler votre rendez-vous et d'en réserver un nouveau en ligne.</p>
-                <a href="appointment_cancel_confirmation.html" class="bouton">Annuler le RDV</a>
+                    <div id="cancelButton"></div>
             </div>
         </div>
 
