--- a/Account/appointment_change_confirmation.html
+++ b/Account/appointment_change_confirmation.html
@@ -14,10 +14,7 @@
 
         <div class="container confirmation">
             <h1>Votre rendez-vous a bien été modifié</h1>
-            <p>
-                Rendez-vous le Date à Heure avec Prénom Nom à Lieu et Etablissement.<br>
-                Une confirmation a été envoyée sur votre adresse email.
-            </p>
+            <div id="recapBooking"></div>
             <a href="appointment.html" class="bouton">Retour aux rendez-vous</a>
         </div>
 
@@ -41,6 +38,8 @@
                 allowedRoles: ['ROLE_PATIENT']
             });
         </script>
+
+        <script src="../js/appointment_book.js"></script>
         
     </body>
 </html>
